2004-05-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/w32g_syn.c: Fix to fit with case of "current" version
	* timidity/timidity.c: Fix typo

2004-05-18  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* configure.in:
	  Add gcc option -mms-bitfield in windows.
	  GOGO ditection for windows fix.
	  Can use gccXXX in CYGWIN and MSYS.
	  Enable dynamic linked portaudio DLLs with CYGWIN and MSYS.
	  Enable dynamic linked FLAC DLL with CYGWIN and MSYS.
	* interface/Makefile.am:
	  Enable wrdt_wcon.c in MSYS.
	  Make clean to remove *escaped.c *.res.
	* interface/w32g_syn.c:
	  Use PACKAGE_VERSION if TIMID_VERSION is not defined.
	* timidity/portaudio_a.c:
	  A hack for pa_asio.dll with timwin32g and kxdriver(SB Live!).

2004-05-16  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/Makefile.{am,in}: Add new files for FLAC/OggFLAC

2004-05-16  Saito <saito@intaa.net>

	* configs/msc[67]-project.zip: Fix for FLAC/OggFLAC DLL.

2004-05-16  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/{flac_a.c,vorbis_a.c,w32_libFLAC_dll.c,w32_libFLAC_dll.h,
	  w32_libFLAC_dll_g.h,w32_libFLAC_dll_i.h,w32_libOggFLAC_dll.c,
	  w32_libOggFLAC_dll.h,w32_libOggFLAC_dll_g.h}:
	  Support for FLAC/OggFLAC DLL.

2004-05-16  Keishi Suenaga <s_keishi@mutt.freemail.ne.jp>

	* interface/gogo_a.c:
	  Support for MP3 GOGO output in Win32CUI interface.

2004-05-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* configs/msc[67]-project.zip: Change version to "current"
	* timidity/Makefile.{am,in}: Add w32_portaudio{.h,_dll.c}

2004-05-14  Saito <saito@intaa.net>

	* configs/msc[67]-project.zip: Fix for PortAudio DLL.
	* timidity/w32g_pref.c: Fix typo.
	* timidity/mix.c: Fix around envelope.

2004-05-14  Daisuke Aoki <dai@sweetparty.ne.jp>

	* timidity/{output.c,portaudio_a.c,w32_portaudio.h,
	  w32_portaudio_dll.c}: Support for PortAudio DLL.

2004-05-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/tclIndex: Resume order

2003-05-05  Chisato Yamauchi <cyamauch@hst.phyas.aichi-edu.ac.jp>
